err/n3d.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/FSM.py'...
***   File "./lib/python3.5/site-packages/FSM.py", line 77
    return `self.value`
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fdpexpect.py'...
***   File "./lib/python3.5/site-packages/fdpexpect.py", line 36
    raise ExceptionPexpect, 'The fd argument is not a valid file descriptor.'
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/n3d-0.3.4.egg-info'...
Compiling './lib/python3.5/site-packages/n3d.py'...
***   File "./lib/python3.5/site-packages/n3d.py", line 294
    print f.readline()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pexpect-2.4.egg-info'...
Compiling './lib/python3.5/site-packages/pexpect.py'...
***   File "./lib/python3.5/site-packages/pexpect.py", line 82
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
